# boothemeg-project

./: .gitignore  README.md  build_speedups.py  get_notif.py  main.py  notifications.json  pyproject.toml
BooTheSchedule/: app.json  package-lock.json  package.json
BooTheSchedule/src/app/: _layout.tsx  index.tsx  notifications.tsx  pipeline.tsx  settings.tsx
BooTheSchedule/src/components/: animated-icon.tsx  app-tabs.tsx  badge.tsx  button.tsx  card.tsx  error-boundary.tsx  event-item.tsx  notification-item.tsx  themed-text.tsx
BooTheSchedule/src/components/ui/: collapsible.tsx
BooTheSchedule/src/constants/: api.ts  colors.ts  theme.ts
BooTheSchedule/src/services/: api.ts
src/: requirements.txt
src/backend/: _speedups.pyx  api.py  calendar_api.py  get_notif.py  processing.py  test.py
src/frontend/: bacasini.md
src/integration/: bacasini.md
src/samples/: file1.json  file2.json  file3.json  file4.json  file5.json
