[project]
name = "boothemeg-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adbutils>=2.12.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "python-dotenv-vault>=0.7.0",
]
